<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>

    <string name="hello">Choose one of the features below.</string>
    <string name="app_name">mCredit</string>
    
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Sales</string>
    <string name="title_feature2">Summary</string>
    <string name="title_feature3">Support</string>
    <string name="title_feature4">Call</string>
        
    <string name="credit_header">mCredit</string>
    <string name="cards_sold">Number of credit cards sold</string>
    
    <string name="username">Username</string>
    <string name="password">Password</string>
    
    <string name="submit">Submit</string>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>

</resources>