<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrd5"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageView
            android:id="@+id/home_btn"
            style="@style/TitleBarAction"
            android:onClick="onClick" />

        <TextView
            style="@style/TitleBarText"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.91"
            android:text="@string/credit_header"
            android:textSize="@dimen/text_size_larger" />

        <ImageView
            android:id="@+id/search_btn"
            style="@style/TitleBarAction"
            android:onClick="onClick" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff000000"
        android:text="@string/username" />

    <EditText
        android:id="@+id/fill_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff000000"
        android:text="@string/password" />

    <EditText
        android:id="@+id/fill_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>


    <TextView
        android:id="@+id/lbl_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#AA0000"
        android:textSize="16sp">
    </TextView>

</LinearLayout>